--- a/src/main.css
+++ b/src/main.css
@@ -1,22 +1,36 @@
 html,
 body {
-  height: 100%;
+    height: 100%;
 }
 
 body {
-  background: #00bcd4;
+    background: #00bcd4;
 }
 
 #app {
-  display: flex;
-  width: 100%;
-  height: 100%;
+    display: flex;
+    width: 100%;
+    height: 100%;
 }
 
 .card-style {
-  display: flex;
-  flex: 1;
+    display: flex;
+    flex: 1;
 
-  align-items: center;
-  justify-content: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.product {
+    width: 200px;
+    height: 200px;
+
+    border-radius: 100%;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.11);
+
+    overflow: hidden;
+
+    position: absolute;
+    bottom: -50px;
+    right: -50px;
 }
